--- a/YumYumDeliv/yum_deliv/templates/Resataurant.html
+++ b/YumYumDeliv/yum_deliv/templates/Resataurant.html
@@ -1,80 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-        }
-
-        h1, h2 {
-            color: #4CAF50;
-        }
-
-        #dishes-list {
-            list-style: none;
-            padding: 0;
-        }
-
-        #dishes-list li {
-            margin-bottom: 20px;
-        }
-
-        #dishes-list img {
-            width: 100%;
-            max-width: 400px;
-            height: auto;
-        }
-
-        #cart-list {
-            list-style: none;
-            padding: 0;
-        }
-
-        #cart-list li {
-            margin-bottom: 20px;
-        }
-
-        #cart-list img {
-            width: 100px;
-            height: 75px;
-            margin-right: 10px;
-        }
-
-        .dish-info {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 10px;
-        }
-
-        .dish-quantity {
-            width: 40px;
-            text-align: center;
-        }
-
-        #btn_place, #btn_clear {
-            background-color: #4CAF50;
-            color: #fff;
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        #btn_clear {
-            background-color: #f44336;
-        }
-
-        #btn_place:hover, #btn_clear:hover {
-            background-color: #45a049;
-        }
-    </style>
+     <link rel="stylesheet" href="{% static 'css/resataurant.css' %}">
 </head>
 <body>
     {% csrf_token %}
@@ -103,124 +35,6 @@
     <button type="button" id="btn_place" onclick="location.href='{% url 'ordered' %}'">Place Order</button>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script>
-        let orderedDishes = [];
-        let cartItems = [];
-        window.onload = function () {
-            loadCart();
-        };
-
-        function addToCart(dishName, dishPhoto, dishID, dishCost) {
-            const existingItemIndexCart = cartItems.findIndex(item => item.id === dishID);
-            const existingItemIndexOD = orderedDishes.findIndex(item => item.id === dishID);
-
-            if (existingItemIndexCart !== -1 && existingItemIndexOD !== -1) {
-                cartItems[existingItemIndexCart].quantity += 1;
-                orderedDishes[existingItemIndexOD].quantity += 1;
-            } else {
-                const dish = {
-                    'id': dishID,
-                    'name': dishName,
-                    'photo': dishPhoto,
-                    'cost': dishCost,
-                    'quantity': 1
-                };
-                const orderedDish = {'id': dishID, 'quantity': 1};
-
-                cartItems.push(dish);
-                orderedDishes.push(orderedDish);
-            }
-
-            updateCart();
-            updateTotalCost();
-            saveCart();
-        }
-
-        function increaseQuantity(dishID) {
-            const existingItemIndexCart = cartItems.findIndex(item => item.id === dishID);
-            const existingItemIndexOD = orderedDishes.findIndex(item => item.id === dishID);
-
-            if (existingItemIndexCart !== -1 && existingItemIndexOD !== -1) {
-                cartItems[existingItemIndexCart].quantity += 1;
-                orderedDishes[existingItemIndexOD].quantity += 1;
-
-                updateCart();
-                updateTotalCost();
-                saveCart();
-            }
-        }
-
-        function decreaseQuantity(dishID) {
-            const existingItemIndexCart = cartItems.findIndex(item => item.id === dishID);
-            const existingItemIndexOD = orderedDishes.findIndex(item => item.id === dishID);
-
-            if (existingItemIndexCart !== -1 && existingItemIndexOD !== -1) {
-                if (cartItems[existingItemIndexCart].quantity > 1) {
-                    cartItems[existingItemIndexCart].quantity -= 1;
-                    orderedDishes[existingItemIndexOD].quantity -= 1;
-                } else {
-                    // Remove the item if quantity is 0
-                    cartItems.splice(existingItemIndexCart, 1);
-                    orderedDishes.splice(existingItemIndexOD, 1);
-                }
-
-                updateCart();
-                updateTotalCost();
-                saveCart();
-            }
-        }
-
-        function updateCart() {
-            const cartList = document.getElementById('cart-list');
-            cartList.innerHTML = '';
-
-            cartItems.forEach(item => {
-                const li = document.createElement('li');
-                li.innerHTML = `<img src="${item.photo}" alt="${item.name}">
-                            ${item.name} - ${item.cost} ₽
-                            <button type="button" onclick="decreaseQuantity('${item.id}')">-</button>
-                            <input type="text" class="dish-quantity" value="${item.quantity}" readonly>
-                            <button type="button" onclick="increaseQuantity('${item.id}')">+</button>`;
-                cartList.appendChild(li);
-            });
-            const orderedDishesJSON = JSON.stringify(orderedDishes);
-                const expirationDate = new Date();
-                expirationDate.setDate(expirationDate.getDate() + 3);
-                document.cookie = `orderedDishes=${orderedDishesJSON}; expires=${expirationDate.toUTCString()}; path=/`;
-                console.log(document.cookie);
-        }
-
-        function updateTotalCost() {
-            const totalCost = cartItems.reduce((acc, item) => acc + item.cost * item.quantity, 0);
-
-            const placeOrderButton = document.getElementById('btn_place');
-            placeOrderButton.textContent = `Place Order (₽${totalCost})`;
-        }
-
-        function clearCart() {
-            cartItems = [];
-            orderedDishes = [];
-            updateCart();
-            updateTotalCost();
-            saveCart();
-        }
-
-        function saveCart() {
-            localStorage.setItem('cart', JSON.stringify(cartItems));
-            localStorage.setItem('orderedDishes', JSON.stringify(orderedDishes));
-        }
-
-        function loadCart() {
-            const savedCart = localStorage.getItem('cart');
-            const savedOD = localStorage.getItem('orderedDishes');
-
-            if (savedCart) {
-                cartItems = JSON.parse(savedCart);
-                orderedDishes = JSON.parse(savedOD);
-                updateCart();
-                updateTotalCost();
-            }
-        }
-    </script>
+    <script src="{% static 'js/resataurant.js' %}"></script>
 </body>
 </html>
