--- a/YumYumDeliv/yum_deliv/templates/PlaceOrder.html
+++ b/YumYumDeliv/yum_deliv/templates/PlaceOrder.html
@@ -1,63 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оформление заказа</title>
-    <style>
-        /* Стили для формы заказа */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-
-        h1 {
-            color: #4CAF50;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 8px;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 16px;
-            box-sizing: border-box;
-        }
-
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #4CAF50;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        /* Адаптивные стили для уменьшения отступов и увеличения шрифта на мобильных устройствах */
-        @media screen and (max-width: 600px) {
-            body {
-                margin: 10px;
-            }
-
-            h1 {
-                font-size: 24px;
-            }
-
-            label, input, textarea {
-                font-size: 14px;
-                margin-bottom: 10px;
-            }
-
-            button {
-                padding: 8px 16px;
-                font-size: 14px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/place_order.css' %}">
 </head>
 <body>
     <h1>Оформление заказа из ресторана {{ rest_name.0.name }}</h1>
@@ -96,24 +44,6 @@
 
         <button type="submit">Оплатить</button>
     </form>
-
-    <script>
-        // Ваши функции JavaScript могут быть добавлены здесь
-
-        // Пример функции submitOrder
-        function submitOrder() {
-            // Получение данных из формы
-            var deliveryAddress = document.getElementById("street").value;
-            var orderItems = document.getElementById("orderItems").innerHTML;
-
-            // Ваши логика и взаимодействие с платежной системой могут быть добавлены здесь
-
-            // Просто для примера выводим информацию в консоль
-            console.log("Адрес доставки:", deliveryAddress);
-            console.log("Список заказанных блюд:", orderItems);
-
-            // Здесь может быть логика отправки данных на сервер или обработки заказа
-        }
-    </script>
+    <script src="{% static 'js/place_order.js' %}"></script>
 </body>
 </html>
