--- a/YumYumDeliv/yum_deliv/templates/Reset.html
+++ b/YumYumDeliv/yum_deliv/templates/Reset.html
@@ -12,89 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Восстановление пароля</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Inter', Arial, sans-serif;
-        }
-
-        form {
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            text-align: center;
-            max-width: 600px;
-            margin: 30px auto;
-        }
-
-        h1 {
-            color: black;
-        }
-
-        input {
-            height: 30px;
-            width: 100%;
-            margin: 8px 0;
-            border-radius: 5px;
-            font-size: 18px;
-            padding: 8px;
-            box-sizing: border-box;
-        }
-
-        input[type="submit"] {
-            padding: 0px;
-            background-color: rgba(7, 179, 185, 0.753);
-            color: rgb(255, 255, 255);
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 100%;
-            height: 40px;
-            font-size: 16px;
-            margin-top: 10px;
-        }
-
-        .back{
-            padding: 20px;
-        }
-
-        .back a {
-            color: cornflowerblue;
-            text-decoration: none;
-        }
-
-        .back i {
-            font-size: 22px;
-        }
-
-        .inner {
-            text-align: center;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .navbar {
-            background-color: #38A9CC;
-            padding: 10px 0;
-            width: 100%;
-        }
-
-        .navbar img {
-            max-width: 100%;
-            height: auto;
-            display: inline-block;
-            margin: 0 auto;
-        }
-
-        .col {
-            display: flex;
-            align-items: center;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
 </head>
 <body>
     <header class="header-main">
