--- a/YumYumDeliv/yum_deliv/templates/UserOrders.html
+++ b/YumYumDeliv/yum_deliv/templates/UserOrders.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Orders</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        .order-list {
-            cursor: pointer;
-        }
-
-        .img-thumbnail {
-            max-height: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/user_order.css' %}">
 </head>
 <body>
 
@@ -122,68 +115,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var orderListItems = document.querySelectorAll('.order-list');
-        var orderDetailsContainer = document.getElementById('order-details');
-        var supportModal = document.getElementById('supportModal');
-        var orderIdInput = supportModal.querySelector('#orderId');
-        console.log("order")
-
-        orderListItems.forEach(function (item) {
-            item.addEventListener('click', function () {
-                var orderId = item.getAttribute('data-order-id');
-                orderIdInput.value = orderId;
-
-                var orderDetailBlocks = document.querySelectorAll('[id^="od-"]');
-                orderDetailBlocks.forEach(function (block) {
-                    block.hidden = true;
-                });
-
-                var selectedOrderDetailBlock = document.getElementById('od-' + orderId);
-                if (selectedOrderDetailBlock) {
-                    selectedOrderDetailBlock.hidden = false;
-                }
-            });
-        });
-
-        var attachmentInput = document.getElementById('attachment');
-        var attachmentPreview = document.getElementById('attachmentPreview');
-
-        attachmentInput.addEventListener('change', function () {
-            attachmentPreview.innerHTML = '';
-
-            for (var i = 0; i < attachmentInput.files.length; i++) {
-                var file = attachmentInput.files[i];
-
-                if (file.type.startsWith('image/')) {
-                    var reader = new FileReader();
-                    reader.onload = function (e) {
-                        var img = document.createElement('img');
-                        img.src = e.target.result;
-                        img.classList.add('img-thumbnail');
-
-                        var deleteButton = document.createElement('button');
-                        deleteButton.textContent = 'Удалить';
-                        deleteButton.classList.add('btn', 'btn-danger', 'mt-2');
-                        deleteButton.addEventListener('click', function () {
-                            attachmentInput.value = '';
-                            attachmentPreview.innerHTML = '';
-                        });
-
-                        var previewBlock = document.createElement('div');
-                        previewBlock.appendChild(img);
-                        previewBlock.appendChild(deleteButton);
-
-                        attachmentPreview.appendChild(previewBlock);
-                    };
-                    reader.readAsDataURL(file);
-                }
-            }
-        });
-    });
-</script>
+<script src="{% static 'js/user_order.js' %}"></script>
 
 </body>
 </html>
