--- a/YumYumDeliv/yum_deliv/templates/Operator.html
+++ b/YumYumDeliv/yum_deliv/templates/Operator.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/operator.css' %}">
     <title>Return Requests Operator Panel</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
             <div class="list-group" id="return-requests-list">
                 <ul class="list-group">
                    {% for feedback in feedbacks %}
-                        <li class="list-group-item order-list" data-feedback-id="{{ feedback.id }}">
+                        <li class="list-group-item feedback-list" data-feedback-id="{{ feedback.id }}">
                             <div>#{{ feedback.id }}</div>
                             <div>Номер заказа-{{ feedback.order_id }}</div>
                             <div>Время обращения {{ feedback.datetime_feedback }}</div>
@@ -33,7 +34,35 @@
                     <h2>Детали обращения</h2>
                 </div>
                 <div class="card-body" id="request-details">
-                    <p>Select a request to view details.</p>
+                    <ul class="list-group list-group-flush">
+                        {% for feedback in feedbacks %}
+                            <div class="card mt-3" id="od-{{ feedback.id }}" hidden>
+                                <div class="card-body">
+                                    <h5 class="card-title">#{{ feedback.id }}</h5>
+
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <p class="card-text"><strong>Comment:</strong> {{ feedback.comment }}</p>
+                                            <p class="card-text"><strong>Date and Time:</strong> {{ feedback.datetime_feedback }}</p>
+                                            <p class="card-text"><strong>Email:</strong> {{ feedback.email }}</p>
+                                            <p class="card-text"><strong>ID:</strong> {{ feedback.id }}</p>
+                                            <p class="card-text"><strong>Order ID:</strong> {{ feedback.order_id }}</p>
+                                            <p class="card-text"><strong>Reason:</strong> {{ feedback.reason }}</p>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <img src="{{ feedback.photo }}" class="img-fluid" alt="Feedback Photo">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label for="responseTextArea">Ответ:</label>
+                                            <textarea class="form-control" id="responseTextArea" rows="3"></textarea>
+                                            <button class="btn btn-primary" id="sendResponseBtn">Отправить ответ</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
         </div>
