--- a/YumYumDeliv/yum_deliv/templates/RestAdmin.html
+++ b/YumYumDeliv/yum_deliv/templates/RestAdmin.html
@@ -136,7 +136,7 @@
         {% endfor %}
     </div>
 
-<form id="info-form" action="/republuc/{{rest_slug}}" method="post" enctype="multipart/form-data">
+<form id="info-form" action="/republic/{{rest_slug}}" method="post" enctype="multipart/form-data">
     <div class="container mt-5">
         <h2>Редактирование информации ресторана</h2>
         {% csrf_token %}
